# mathematica-kernel-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
shared_kernel/: shared_kernel_bridge.wl
src/mathematica_kernel_mcp/: __main__.py  backends.py  bridge.py  models.py  notebook.py  parser.py  server.py  session.py
tests/: test_approach_workflows.py  test_bridge.py  test_kernel_registry.py  test_notebook_read.py  test_parser.py  test_real_example_workflow.py  test_server.py  test_server_all_tools.py  test_server_stdio.py  test_session.py  test_session_manager.py  test_wolfram_source.py
tests/fixtures/: dim_reg_ode.m  dim_reg_ode.nb  sample.m
wolfram/SharedKernelMCP/: PacletInfo.wl
wolfram/SharedKernelMCP/Kernel/: init.m
