[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mathematica-kernel-mcp"
version = "0.1.0"
description = "MCP server for agentic Mathematica/Wolfram Language development"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "wolframclient>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
