[build-system]
requires = ["setuptools>=77.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mathematica-kernel-mcp"
version = "0.3.0"
description = "MCP server for agentic Mathematica/Wolfram Language development"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Maor Ben-Shahar" }]
dependencies = [
    "fastmcp>=2.0.0",
    "wolframclient>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
